fix(temp): obvious 1px height object after folding
use `opacity` param to temporary solve this problem(the object still exists but become invisible due to `opacity` is set to 0)

--- a/_sass/gold_efficiency/table.scss
+++ b/_sass/gold_efficiency/table.scss
@@ -186,6 +186,15 @@ $tooltip-color: #333;
     content: "-";
   }
 
+  tr.compare {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  tr.compare.active {
+    opacity: 1;
+  }
+
   tr.compare td {
     padding: 0px 15px;
     transition: padding 0.3s;
